# defi

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: DEFI_YIELD_AGENT_PLAN.md  DELTA_NEUTRAL_LP_BACKTEST.md  STRATEGY_COMPARISON.md
scripts/: backtest_lp_regime.py  mark_stale_hedge_events.py
src/defi_agent/: config.py  constants.py  keys.py  main.py
src/defi_agent/chain/: base_client.py
src/defi_agent/core/: analytics.py  rebalancer.py  state.py
src/defi_agent/hedge/: hyperliquid_client.py
src/defi_agent/lp/: aerodrome.py  math.py
src/defi_agent/tg/: bot.py
