[project]
name = "defi-agent"
version = "0.1.0"
description = "Delta-neutral LP agent: Aerodrome Slipstream LP on Base + Hyperliquid short hedge, Telegram UI"
requires-python = ">=3.11"
dependencies = [
    "web3>=7.0",
    "hyperliquid-python-sdk>=0.15",
    "aiogram>=3.13",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "eth-account>=0.13",
    "keyring>=25.0",
]

[project.scripts]
defi-agent = "defi_agent.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/defi_agent"]
